--- a/index.html
+++ b/index.html
@@ -5,29 +5,33 @@
   <title>Juan Boza Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
 </head>
+
 <body>
+  <header> 
+    <h1>JuanBoza</h1>
+      <nav> 
+        <ul>
+          <li><a class="active" href="index.html">Home</a></li>
+          <li><a class="active" href="portfolio.html">Portfolio</a></li>
+          <li><a class="active" href="contact.html">Contact</a></li>
+        </ul>
+      <nav>
+  </header>
 
-<nav class="navbar navbar-inverse">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a class="navbar-brand" href="#">Juan Boza</a>
-    </div>
-    <ul class="nav navbar-nav">
-      <li><a href="index.html">Contact</a></li>
-      <li><a href="portfolio.html">Portfolio</a></li>
-      <li><a href="contact.html">About</a></li>
-    </ul>
-  </div>
-</nav>
-  
-<div class="container">
-  <h3>Inverted Navbar</h3>
-  <p>An inverted navbar is black instead of gray.</p>
-</div>
 
+  <main> 
+    <section class="container-one">
+      <h1>About</h1>
+    </section>
+
+    <section>
+      <p>I am currently a full-stack developer student at the University of Utah, in Salt lake City.</p> 
+    </section>
+  </main> 
 </body>
 </html>
