responsive navbar added

--- a/index.html
+++ b/index.html
@@ -5,22 +5,23 @@
   <title>Juan Boza Portfolio</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="style.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Open+Sans+Condensed:wght@700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
   <header> 
-    <h1>JuanBoza</h1>
-      <nav> 
-        <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
-        </ul>
-      <nav>
+    <div class="topnav" id="myTopnav">
+      <a href="#home" class="active">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
+        <i class="fa fa-bars"></i>
+      </a>
+    </div>
   </header>
 
 
