contact.html and portfolio.html finished

--- a/index.html
+++ b/index.html
@@ -15,12 +15,13 @@
 <body>
   <header> 
     <div class="topnav" id="myTopnav">
-      <a href="#home" class="active">Home</a>
-      <a href="#news">News</a>
-      <a href="#contact">Contact</a>
-      <a href="#about">About</a>
-        <i class="fa fa-bars"></i>
-      </a>
+      <nav>
+        <ul>
+          <li><a href="index.html" class="active">Juan Boza</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </div>
   </header>
 
@@ -32,6 +33,17 @@
 
     <section>
       <p>I am currently a full-stack developer student at the University of Utah, in Salt lake City.</p> 
+      <br>
+      <p> <div class="row"> 
+        <nav> 
+          <ul>
+            <li><a href="JuanBoza80@gmail.com">Gmail - JuanBoza80@gmail.com</a></li>
+            <li><a href="u0916447@utah.edu">Umail - u0916447@utah.edu</a></li>
+            <li><a href="https://www.linkedin.com/in/juan-boza-2b60001bb/">LinkedIn Profile</a></li>
+            <li><a href="https://github.com/JuanBoza">Github Repositories</a></li>
+          </ul>
+        </nav>
+      </div></p> 
     </section>
   </main> 
 </body>
