--- a/contact.html
+++ b/contact.html
@@ -11,33 +11,64 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
-  <header>
-   <h1>JuanBoza</h1>
-    <nav> 
-      <ul>
-        <li><a class="active" href="index.html">Home</a></li>
-        <li><a class="active" href="portfolio.html">Portfolio</a></li>
-        <li><a class="active" href="contact.html">Contact</a></li>
-      </ul>
-    <nav>
+  <header> 
+      <div class="topnav" id="myTopnav">
+        <nav>
+          <ul>
+            <li><a href="index.html" class="active">Juan Boza</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
+            <li><a href="contact.html">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
   </header> 
 
-  <main> 
-    <section class="container-one">
-      <h1>Contacts</h1>
-    </section> 
-      <nav> 
-        <ul>
-          <li><a href="JuanBoza80@gmail.com">Gmail - JuanBoza80@gmail.com</a></li>
-          <li><a href="u0916447@utah.edu">Umail - u0916447@utah.edu</a></li>
-          <li><a href="https://www.linkedin.com/in/juan-boza-2b60001bb/">LinkedIn Profile</a></li>
-          <li><a href="https://github.com/JuanBoza">Github Repositories</a></li>
-        </ul> 
-      </nav>
-  </main> 
+<body>
+  <div class="container">
+    <form action="contact page">
+      <div class="row">
+        <div class="col-25">
+          <label for="firstname">First Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="firstname" name="firstname" placeholder="Your name..">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="lastname">Last Name</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="lastname" name="lastname" placeholder="Your last name..">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="phoneNumber">Phone Number</label>
+        </div>
+        <div class="col-75">
+          <input type="text" id="phoneNumber" name="phoneNumber" placeholder="Your phone number..">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-25">
+          <label for="subject">Subject</label>
+        </div>
+        <div class="col-75">
+          <textarea id="subject" name="subject" placeholder="Write something.." style="height:200px"></textarea>
+        </div>
+      </div>
+      <div class="row">
+        <input type="submit" value="Submit">
+      </div>
+    </form>
+  </div>
+  
 </body>
+  <footer> 
+  </footer>
 </html>
+
 
 
 
