--- a/portfolio.html
+++ b/portfolio.html
@@ -13,14 +13,15 @@
 
 <body> 
   <header> 
-    <h1>JuanBoza</h1>
-      <nav> 
-        <ul>
-          <li><a class="active" href="index.html">Home</a></li>
-          <li><a class="active" href="portfolio.html">Portfolio</a></li>
-          <li><a class="active" href="contact.html">Contact</a></li>
-        </ul>
+    <div class="topnav" id="myTopnav">
       <nav>
+        <ul>
+          <li><a href="index.html" class="active">Juan Boza</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
 
 <main>
