added responsive layout to idex.html

--- a/index.html
+++ b/index.html
@@ -31,20 +31,23 @@
       <h1>About</h1>
     </section>
 
-    <section>
+    <article>
       <p>I am currently a full-stack developer student at the University of Utah, in Salt lake City.</p> 
       <br>
+      <section class="container-one"> 
+      <h2>Contacts</h2>
+      </section> 
       <p> <div class="row"> 
         <nav> 
           <ul>
-            <li><a href="JuanBoza80@gmail.com">Gmail - JuanBoza80@gmail.com</a></li>
-            <li><a href="u0916447@utah.edu">Umail - u0916447@utah.edu</a></li>
+            <li><a href="mailto: JuanBoza80@gmail.com">Gmail</a></li>
+            <li><a href="mailto: u0916447@utah.edu">Umail</a></li>
             <li><a href="https://www.linkedin.com/in/juan-boza-2b60001bb/">LinkedIn Profile</a></li>
             <li><a href="https://github.com/JuanBoza">Github Repositories</a></li>
           </ul>
         </nav>
       </div></p> 
-    </section>
+    </article>
   </main> 
 </body>
 </html>
